vlib/v/checker/tests/for_in_range_result_optional_err.out
vlib/v/checker/tests/for_in_range_result_optional_err.vv:11:23: error: the `high` value in a `for x in low..high {` loop, cannot be Result or Option
    9 | fn main() {
   10 |     arr := [1, 2, 3, 4, 5, 6, 7, 8, 9]
   11 |     for _ in 0 .. arrays.idx_min(arr) {
      |                          ~~~~~~~~~~~~
   12 |     }
   13 |
vlib/v/checker/tests/for_in_range_result_optional_err.vv:14:16: error: the `high` value in a `for x in low..high {` loop, cannot be Result or Option
   12 |     }
   13 | 
   14 |     for _ in 0 .. foo() {
      |                   ~~~~~
   15 |     }
   16 | }
